--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
-        <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/bootstrap-icons.css" rel="stylesheet">
-        <link href="css/tooplate-clean-work.css" rel="stylesheet">
+        <link href="./indexPageAssets/css/bootstrap.min.css" rel="stylesheet">
+        <link href="./indexPageAssets/css/bootstrap-icons.css" rel="stylesheet">
+        <link href="./indexPageAssets/css/tooplate-clean-work.css" rel="stylesheet">
 
     </head>
     <body>
@@ -74,7 +74,7 @@
                         </div>
 
                         <div class="col-lg-6 col-12 custom-block-wrap">
-                            <img src="images/male-wearing-apron-female-white-t-shirt-smiling-broadly-being-glad-clean.png" class="img-fluid">
+                            <img src="./indexPageAssets/images/male-wearing-apron-female-white-t-shirt-smiling-broadly-being-glad-clean.png" class="img-fluid">
 
                             <div class="custom-block d-flex flex-column">
                                 <h6 class="text-white mb-3">For more info <br> Contact us:</h6>
@@ -98,15 +98,16 @@
 
 
         <!-- JAVASCRIPT FILES -->
-        <script src="js/jquery.min.js"></script>
+        
+        <script src="./indexPageAssets/js/jquery.min.js"></script>
         <!-- <script src="js/bootstrap.min.js"></script> -->
-        <script src="js/jquery.backstretch.min.js"></script>
-        <script src="js/counter.js"></script>
-        <script src="js/countdown.js"></script>
+        <script src="./indexPageAssets/js/jquery.backstretch.min.js"></script>
+        <script src="./indexPageAssets/js/counter.js"></script>
+        <script src="./indexPageAssets/js/countdown.js"></script>
         <!-- <script src="js/init.js"></script> -->
         <!-- <script src="js/modernizr.js"></script> -->
-        <script src="js/animated-headline.js"></script>
-        <script src="js/custom.js"></script>
+        <script src="./indexPageAssets/js/animated-headline.js"></script>
+        <script src="./indexPageAssets/js/custom.js"></script>
 
     </body>
 </html>
