--- a/church1/cutoff.html
+++ b/church1/cutoff.html
@@ -15,7 +15,7 @@
     <script src="./assest/scripts/auth.js"></script> 
 </head>
 <body>
-    <nav>
+    <nav id="navbar">
         <input type="checkbox" id="check" />
         <label for="check" class="checkbtn">
           <i class="fas fa-bars"></i>
@@ -180,6 +180,7 @@
         document.getElementById('downloadCutOffPdf').style.display = 'none'; // Hide the download button
         document.getElementById('first-signature').style.display = 'block'; // Show the signatures
         document.getElementById('second-signature').style.display = 'block'; // Show the signatures
+        document.getElementById('navbar').style.display = 'none'; // Hide the navbar
         document.getElementById('footer').style.display = 'none'; // Hide the footer
        
         window.print(); // Print the page
@@ -188,6 +189,7 @@
         document.getElementById('downloadCutOffPdf').style.display = 'block'; // Show the download button again
         document.getElementById('first-signature').style.display = 'none'; // Hide the signatures
         document.getElementById('second-signature').style.display = 'none'; // Hide the signatures
+        document.getElementById('navbar').style.display = 'block'; // Show the navbar
         document.getElementById('footer').style.display = 'block'; // Hide the footer
 
       });
